--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,26 +30,41 @@
           </div>
             <ul class="nav nav-pills">
               <li role="presentation"><a class="passive" href="index.html">Main</a></li>
-              <li role="presentation" class="active"><a class="active" href="contact.html">Contacts</a></li>
+              <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
             </ul>
         </div>
       </nav>
       <div class="container-fluid">
-          <h4 class="prenames">Director</h4>
-            <table class="table table table-condensed">
-              <tr class="names">
-                  <td class="name">Name</td>
-                  <td class="skype">Skype</td>
-                  <td class="email">Email</td>
-                  <td class="phone">Phone</td>
-              </tr>
-              <tr class="data">
-                <td class="name">Jonh Smith</td>
-                <td class="skype">Smith'sSkype</td>
-                <td class="email">johnsmith@email.com</td>
-                <td class="phone">+380 555 765 48 90</td>
-              </tr>
-            </table>
+        <div class="row">
+          <div class="col-md-4">
+            <a class="thumbnail-fluid">
+              <img src="../static/images/director.jpg" alt="image">
+            </a>
+          </div>
+          <div class="col-md-8">
+            <div class="panel panel-primary">
+              <div class="panel-body">
+                <h4 class="prenames">Director</h4>
+              </div>
+              <div class="panel-footer">
+                <table class="table table-condensed">
+                  <tr class="names">
+                    <td class="name">Name</td>
+                    <td class="skype">Skype</td>
+                    <td class="email">Email</td>
+                    <td class="phone">Phone</td>
+                  </tr>
+                  <tr class="data">
+                    <td class="name">Jonh Smith</td>
+                    <td class="skype">Smith'sSkype</td>
+                    <td class="email">johnsmith@email.com</td>
+                    <td class="phone">+380 555 765 48 90</td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
           <h4 class="prenames">Manager</h4>
             <table class="table table table-condensed">
               <tr class="names">
