--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -36,6 +36,7 @@
      <div class="jumbotron">
       <div class="row">
         <h2>Студенты курса PyByrsa</h2 >
+		  <p>Ниже представлен список студентов периода обучения 19.10.2015 - 28.12.2015</p>
       </div>
      </div><!-- /.col-lg-4 -->
      <div class="panel panel-default">
