--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -46,38 +47,39 @@
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="../static/css/keanu.jpeg" alt="keanu">
+      <img src="../static/images/keanu.jpeg" alt="keanu">
       <div class="caption">
         <h3>Director</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
+        <h4>Name: Keanu Reaves"</h4>
+        <h4>Skype: KeanuReaves</h4>
+        <h4>Email: keanu@example.com</h4>
+        <h4>Phone: 999999999</h4>
+        </div>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-sm-6 col-md-4">
+<div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="../static/css/clooney.jpeg" alt="clooney">
+      <img src="../static/images/clooney.jpeg" alt="clooney">
       <div class="caption">
         <h3>Manager</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <h4>Name: George Klooney"</h4>
+        <h4>Skype: GeorgeClooney</h4>
+        <h4>Email: clooney@example.com</h4>
+        <h4>Phone: 8888888888</h4>
       </div>
-    </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-sm-6 col-md-4">
+<div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="../static/css/pitt.jpeg" alt="pitt">
+      <img src="../static/images/pitt.jpeg" alt="pitt">
       <div class="caption">
         <h3>Founder</h3>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <h4>Name: Bred Pitt"</h4>
+        <h4>Skype: BredPitt</h4>
+        <h4>Email: pitt@example.com</h4>
+        <h4>Phone: 777777777</h4>
       </div>
     </div>
-  </div>
 </div>
 
 
