--- a/templates/index.html
+++ b/templates/index.html
@@ -37,11 +37,13 @@
         <div class="starter-template">
           <h1>PyBursa</h1>
           <h2>Description</h2>
+          <div class="panel panel-primary center">
               <p class="prenames">В этом курсе мы сместили акцент в сторону практики.</br>
 Будет умеренное количество теории - максимум практики.
 Примерное соотношение теории и практики: 30% на 70%.</br>
 Курсы будут проходить с 19 октября по 28 декабря.
 Практические занятия в аудитории + онлайн лекции.</p>
+          </div>
         </div>
       </div>
       <div class="starter-template active">
