--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
    
-    <title>My</title>
+    <title>Students</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -34,50 +34,77 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="index.html">Main</a></li>
+            <li role="presentation" ><a href="index.html">Main</a></li>
             <li role="presentation"><a href="contact.html">Contacts</a></li>
-	<li role="presentation" ><a href="student_list.html">Students</a></li>
+	<li role="presentation"><a href="student_list.html">Students</a></li>
           </ul>
         </nav>
         
       </div>
 
       <div class="jumbotron">
-<h1>HogwBursa</h1>        
-<h2>Description</h2>
-        <p class="lead">Язык программирования Python (волш. Василиск) — это мощный инструмент для создания программ самого разнообразного назначения, доступный даже для маглов.  </p>
-        <p><a class="btn btn-lg btn-success" href="index.html" role="button">Послать почтовую сову с заявкой прямо сейчас</a></p>
+	<h1>Щуцкая Елена</h1>        
       </div>
 
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>Program</h4>
-						<ol>
-							<li>Основы магии Python </li>
-							<li>Строки и итераторы</li>
-							<li>Функции и модульность</li>
-							<li>Библиотеки и пакетный менеджер</li>
-							<li>Классы и ООП, основы</li>
-							<li>Классы и ООП, возможности Python </li>
-							<li>Работа с файлами</li>
-							<li>Основы html/css  </li>
-							<li>Структура Web приложения </li>
-							<li>Полёты на мётлах </li>
+ <div class="media-left media-middle">
+      <img class="media-object" src="../static/images/mirtl.jpeg" alt="..." width="150" height="200">
+   </div>
+
+      <div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Информация о студенте</div>
+
+  <!-- Table -->
+  <table class="table">
+   <tr>
+    <td>Surname</td><td>Shchutskaya</td>
+   </tr>
+<tr>
+    <td>Name</td><td>Elena</td>
+   </tr>
+
+    <td>Patronymic</td><td>Nikolaevna</td>
+   </tr>
+<tr>
+    <td>Birth Date</td><td>31/10/1985</td>
+   </tr>
+<tr>
+    <td>Address</td><td>Украина, Запорожье, Кремлевская, 109</td>
+   </tr>
+<tr>
+    <td>E-mail</td><td>MirtlInMe@net</td>
+   </tr>
+<tr>
+    <td>Skype</td><td>e_realWizard</td>
+   </tr>
+<tr>
+    <td>Average Grade</td><td>100</td>
+   </tr>
+<tr>
+    <td>Rating</td><td>33</td>
+   </tr>
+   
+  </table>
+</div>
+ 
 
 
-
-
-          	</ol><p>Наш девиз «Dormiens nunquam titillandus coluber!»</p>
-
-          
-        </div>
-      </div>
-
-      <footer class="footer">
-       
-      </footer>
-
-    </div> <!-- /container -->
+<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Performance</div> 
+<div>
+<table class="table">
+   <tr>
+    <th>Course</th><th>Week</th><th>Control Type</th><th>Grade</th>
+   </tr>   
+	
+<tr> 
+    <td rowspan="2">PY101 Трансгенерация в Python</td><td rowspan="2">Week1</td><td>Tests</td>
+<td>99%</td>   </tr>
+<tr> 
+    <td>Problem Task №1</td><td>100%</td>   </tr>
+  </table>
+</div>    </div> <!-- /container -->
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
