--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -8,9 +8,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>Professors</title>
+   
+    <title>Students</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -31,65 +30,53 @@
 
   <body>
 
-
     <div class="container">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" ><a href="index.html">Main</a></li>
-            <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
-						<li role="presentation" ><a href="student_list.html">Students</a></li>
+            <li role="presentation"><a href="contact.html">Contacts</a></li>
+						<li role="presentation" class="active"><a href="Students_list.html">Students</a></li>
           </ul>
         </nav>
         
       </div>
 
+      <div class="jumbotron">
+<h1>Список адептов курса HogwBursa</h1>        
 
-  
-<div class="page-header">
-  <h1>Peritorum</h1>
+      </div>
+
+
+
+      <div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Ниже представлен список будущих Змееустов</div>
+
+  <!-- Table -->
+  <table class="table">
+    <tr>
+    <th>No</th><th>Surname</th><th>Name</th><th>Address</th><th>Skype</th>
+   </tr>
+    <td><a href="student_detail.html">1</a></td><td>Щуцкая</td><td>Елена</td><td>Украина, Запорожье, Кремлевская, 109</td><td>e_realWizard</td></tr>
+   <tr>
+    <td>2</td><td>Пузина</td><td>Екатерина</td><td>Украина, Запорожье, Ленина, 98/8</td><td>e.puzina</td>
+   </tr>
+   <tr>
+    <td>3</td><td>Баренштейн</td><td>Илона</td><td>Украина, Запорожье, отель Шератон, люкс-номер</td><td>ilonarich</td>
+   </tr>
+<tr>
+    <td>4</td><td>Стецяк</td><td> Орест</td><td>Харьков, Салтовка, 1</td><td>o_steziak</td>
+   </tr>
+<tr>
+    <td>5</td><td>Поттер</td><td>Гарри</td><td>Лондон, Ул. Тисовая, 4 </td><td>aBoyWithaScar</td>
+   </tr>
+  </table>
 </div>
-   
-<div class="media">
-		
-  <div class="media-left media-middle">
-      <img class="media-object" src="../static/images/Director.jpg" alt="..." width="150" height="200">
-   </div>
-  <div class="media-body">
-    <h4 class="media-heading">Director</h4>
-    <p>Name: Альбус Персиваль Вулфрик Брайан Дамблдор</p>
-	<p>Skype: magnamagus</p>
-<p> Email: magnamagus@sova.com</p>
-<p>Phone : 1234567890</p>
-  </div>
-
-<div class="media-left media-middle">
-      <img class="media-object" src="../static/images/Manager.jpg" alt="..." width="150" height="200">
-   </div>
-  <div class="media-body">
-    <h4 class="media-heading">Manager</h4>
-    <p>Name: Долорес Джейн Амбридж</p>
-	<p>Skype: ulceris</p>
-	<p> Email: ulceris@sova.com</p>
-	<p>Phone : 1234567890</p>
-  </div>
-
-<div class="media-left media-middle">
-      <img class="media-object" src="../static/images/Founder.jpg" alt="..." width="150" height="200">
-   </div>
-  <div class="media-body">
-    <h4 class="media-heading">Founder</h4>
-    <p>Name: Северус Снегг</p>
-	<p>Skype: lanistaMilvum</p>
-<p> Email: lanistaMilvum@sova.com</p>
-<p>Phone : 1234567890</p>
-  </div>
-</div>
-
 
      
 
-   
+    </div> <!-- /container -->
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
