--- a/templates/index.html
+++ b/templates/index.html
@@ -37,13 +37,11 @@
         <div class="starter-template">
           <h1>PyBursa</h1>
           <h2>Description</h2>
-          <div class="panel panel-primary center">
-              <p class="prenames">В этом курсе мы сместили акцент в сторону практики.</br>
+          <p class="prenames">В этом курсе мы сместили акцент в сторону практики.</br>
 Будет умеренное количество теории - максимум практики.
 Примерное соотношение теории и практики: 30% на 70%.</br>
 Курсы будут проходить с 19 октября по 28 декабря.
 Практические занятия в аудитории + онлайн лекции.</p>
-          </div>
         </div>
       </div>
       <div class="starter-template active">
@@ -68,7 +66,7 @@
 
 
       <div class="jumbotron">
-        <h4>OCTOBER 19, 2015</h4>
+        <h4><span class="label label-default">OCTOBER 19, 2015</span></h4>
         <pre class="text1">Уважаемые студенты!
 
 Внесены корректировки в тестовые задания:
@@ -83,7 +81,9 @@
       </div>
 
         <div class="jumbotron">
-          <h4>OCTOBER 22, 2015</h4>
+          <div class="alert alert-success" role="alert">
+            <h4>OCTOBER 22, 2015</h4>
+          </div>
           <pre class="text1">Доступно второе контрольное задание!
 
 Сегодня (22.10.2015) стало доступно второе практическое задание.
