--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <![endif]-->
 </head>
 <body class="back">
-  <div class="container">
+  <div class="container center-block">
     <!-- Static navbar -->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
