--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     </style>
     
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-
+    <link href="../static/css/style.css" rel="stylesheet">
     
     <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
 
@@ -31,7 +31,7 @@
           
             <ul class="nav nav-pills pull-right">
               <li role="presentation" class="active"><a href="index.html">Main</a></li>
-              <li role="presentation"><a href="contact.html">Contact</a></li>
+              <li role="presentation"><a href="contact.html"> Contacts</a></li>
             </ul>
           
         </nav>
@@ -41,7 +41,7 @@
     <div class= "container">
       <div class="jumbotron">
       
-        <h2>Description</h2>
+        <h2><b>Description</b></h2>
         <p class="lead"> Lorem ipsum dolor sit amet, maiorum blandit signiferumque quo an, his autem tation quaeque at, nam eruditi nominati forensibus an. Eum  ne admodum invenire quaerendum, nam ne simul appellantur. Ocurreret imperdiet patrioque mei an, sea ne impedit civibus. Iriure indoctum pertinacia in eos. Vis id mundi tritani. Ea vel integre partiendo iudicabit.
 
           Iracundia persequeris eam te, eligendi placerat explicari et vel. Cu veritus singulis eos, dicit munere scripserit eu mel, pro utinam ridens ex. Corpora voluptua adolescens te duo, ius et impedit vivendo sensibus. Suavitate prodesset nec an, eius consul legendos mea ne, persius indoctum ad ius. Mea te paulo corpora efficiantur. In vel clita meliore menandri, mei et graeci vocent posidonium.
@@ -66,11 +66,35 @@
         
         </div>
             <p><a class="btn btn-lg btn-success" href="contact.html" role="button">Связаться с нами</a></p>
+
+    <div class= "container">
+      <div class="jumbotron">
+      
+        <h2>"Как говорили древние латиняне: то что один человек сделал, другой завсегда сломать может!"</h2>
+          
+        <div class="floatright">
+          <p>Lorem ipsum dolor sit amet, maiorum blandit signiferumque quo an, his autem tation quaeque at, nam eruditi nominati forensibus an. Eum ne admodum invenire quaerendum, nam ne simul appellantur. Ocurreret imperdiet patrioque mei an, sea ne impedit civibus. Iriure indoctum pertinacia in eos. Vis id mundi tritani. Ea vel integre partiendo iudicabit.
+
+          Iracundia persequeris eam te, eligendi placerat explicari et vel. Cu veritus singulis eos, dicit munere scripserit eu mel, pro utinam ridens ex. Corpora voluptua adolescens te duo, ius et impedit vivendo sensibus. Suavitate prodesset nec an, eius consul legendos mea ne, persius indoctum ad ius. Mea te paulo corpora efficiantur. In vel clita meliore menandri, mei et graeci vocent posidonium.
+
+          </p>
+          <br>
+          <br>
+        
+        
     
           </div>
         </div>
       </div>
-   </div>  
+    </div> 
+    <div class="container">
+      <div class="st_container">
+        <h6><p>Надо добавить стилей!</p> </h6>
+
+      </div>
+    </div>
+    
+    
 
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
