--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,4 +20,5 @@ h4 {font-weight: bold}
 .phone {width: 25%}
 .panel-body {background: #00BFFF;}
 .panel {width:70%;}
-.center {align:center}
+.text2 {background: #00BFFF;font-style: italic}
+.text3 {background: #00BFFF;}
