--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,8 +10,8 @@
 
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,14 +30,14 @@
           </div>
             <ul class="nav nav-pills">
               <li role="presentation"><a class="passive" href="index.html">Main</a></li>
-              <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
+              <li role="presentation" class="active"><a class="active" href="contact.html">Contacts</a></li>
             </ul>
         </div>
       </nav>
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-4">
-            <a class="thumbnail-fluid">
+            <a class="container-fluid">
               <img src="../static/images/director.jpg" alt="image">
             </a>
           </div>
