--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
 
       <div class="jumbotron">
         <h4><span class="label label-default">OCTOBER 19, 2015</span></h4>
-        <pre class="text1">Уважаемые студенты!
+        <pre class="text1 text3">Уважаемые студенты!
 
 Внесены корректировки в тестовые задания:
 
@@ -83,8 +83,8 @@
         <div class="jumbotron">
           <div class="alert alert-success" role="alert">
             <h4>OCTOBER 22, 2015</h4>
-          </div>
-          <pre class="text1">Доступно второе контрольное задание!
+
+          <pre class="text1 text2">Доступно второе контрольное задание!
 
 Сегодня (22.10.2015) стало доступно второе практическое задание.
 
@@ -102,9 +102,11 @@
 
 Если не все условия выполнены - вы можете нажать на строку "See full output" и посмотреть детали о том, каким условиям ваше решение не соответствует.
 
-Если с первого раза решить правильно не получается, то рекомендую решение писать в локальном файле и экспериментировать, не сжигая попытки, после чего переносить правильное решение в систему.</pre>
+Если с первого раза решить правильно не получается, то рекомендую решение писать в локальном файле и экспериментировать, не сжигая попытки, после чего переносить правильное решение в систему.</pre></div>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../static/js/bootstrap.js"></script>
   </body>
