--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -14,8 +14,8 @@
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="jumbotron-narrow.css" rel="stylesheet">
+    <!-- Custom styles for this template 
+    <link href="jumbotron-narrow.css" rel="stylesheet">-->
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -36,7 +36,7 @@
           <ul class="nav nav-pills pull-right">
             <li role="presentation" ><a href="index.html">Main</a></li>
             <li role="presentation"><a href="contact.html">Contacts</a></li>
-						<li role="presentation" class="active"><a href="Students_list.html">Students</a></li>
+						<li role="presentation" class="active"><a href="Student_list.html">Students</a></li>
           </ul>
         </nav>
         
