--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -48,9 +49,9 @@
       <h1 class="description">Description </h1>
       <h2 class="course">PyBursa </h2>
       <h3 class="program">Program </h3>
-      <p>Topic #1</p>
-      <p>Topic #2</p>
-      <p>Topic #3</p>
+      <p id="topic1">Topic #1</p>
+      <p id="topic2">Topic #2</p>
+      <p id="topic3">Topic #3</p>
       <p>...</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
