Added Student menu and table in page

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
           <ul class="nav nav-justified">
             <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </nav>
       </div>
