--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Our Team | Contacts</title>
+    <title>PyBursa - professional courses</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -21,7 +21,6 @@
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../static/js/ie-emulation-modes-warning.js"></script>
     <script src="../static/js/bootstrap.js"></script>
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -39,51 +38,24 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
+            <li class="active"><a href="index.html">Main</a></li>
+            <li><a href="contact.html">Contacts</a></li>
           </ul>
         </nav>
       </div>
-
       <!-- Jumbotron -->
-      <div class="jumbotron">
-        <h1>Our Team</h1>
-        <p class="lead">Best team and best professional courses. PyBursa - best choiсe!</p>
-        <p><a class="btn btn-lg btn-success" href="http://pybursa.com/" role="button">Get started today</a></p>
-      </div>
+      <div class="jumbotron first_block">
+        <h1>Description</h1>
+        <p>PyBursa, JSBursa, JavaBursa - professional courses</p>
+        <p class="lead">Sign up for courses Python. Hit the modern trend. WEB development</p>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-lg-4">
-          <h2>Manager</h2>
-          <img src="../static/images/director.jpg" class="img-responsive img-rounded">
-          <p>Manager course</p>
-          <p><b>Name:</b> Алена Чайка</p>
-          <p>Skype: alena.itbursa</p>
-          <p>Email: alena.itbursa@gmail.com</p>
-          <p>Phone: +38 063 625 07 55</p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Director</h2>
-          <img src="../static/images/manager.jpg" class="img-responsive img-rounded">
-          <p>Director course</p>
-          <p><b>Name:</b> Дария Михалевич</p>
-          <p>Skype: darka.darka.darka.darka.</p>
-          <p>Email: daria.mykhalevych@gmail.com</p>
-          <p>Phone: +38 096 469 15 57</p>
-       </div>
-        <div class="col-lg-4">
-          <h2>Founder</h2>
-          <img src="../static/images/osnovatel.jpg" class="img-responsive img-rounded">
-          <p>Founder course</p>
-          <p><b>Name:</b> Павел Обод</p>
-          <p>Skype: azaless</p>
-          <p>Email: itbursa100@gmail.com</p>
-          <p>Phone: +38 096 469 15 57</p>
-        </div>
       </div>
-
+      <hr>
+      <div class="jumbotron second_block">
+        <h2>Program</h2>
+            <p>Basics of Python. Lines and iterators. Functions and modularity. Libraries and the package manager</p>
+            <p><a class="btn btn-lg btn-success" href="http://pybursa.com/" role="button">Get started today</a></p>
+      </div>
       <!-- Site footer -->
       <footer class="footer">
         <p>&copy; ItBursa 2015</p>
