--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
    
-    <title>Students</title>
+    <title>StudentDetail</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
