--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -51,7 +51,7 @@
       </div>
       <hr>
       <div class="jumbotron second_block">
-        <table class="table table-hover left">
+        <table class="table table-hover left table-responsive">
       <thead>
         <tr>
           <th>№</th>
