--- a/templates/contact.html
+++ b/templates/contact.html
@@ -91,8 +91,24 @@
 
 
 
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+  </div>
+
+
       <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      <button type="button" class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#myModal">
         Launch demo modal
       </button>
 
@@ -114,22 +130,6 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-    </div>
-
-
-
-
-
-
-  </div>
-
-
-
 
 
 
