--- a/templates/index.html
+++ b/templates/index.html
@@ -112,8 +112,19 @@
       </ul>
 
 
+
+
+
+
+
+
+    </div>
+  </div><!-- /container -->
+
+
+
       <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      <button type="button" class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#myModal">
         Launch demo modal
       </button>
 
@@ -138,10 +149,6 @@
 
 
 
-
-
-    </div>
-  </div><!-- /container -->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src=
   "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
