--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,10 @@
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron transparent list bord">
+    <div class="jumbotron parent list bord">
       <h1 class="change shad shadred">iBursa</h1>
       <h2 class="change text-uppercase">Description</h2>
-      <p class="just">This course introduces the student to the Python language. Upon
+      <p class="just opa">This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
       Python programs dealing with a wide variety of subject matter domains.
       Topics include language components, the IDLE environment, control flow
@@ -110,14 +110,6 @@
           </ol>
         </li>
       </ul>
-
-
-
-
-
-
-
-
     </div>
   </div><!-- /container -->
 
@@ -146,8 +138,6 @@
           </div>
         </div>
       </div>
-
-
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src=
