--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron parent list bord">
+    <div class="jumbotron transparent list bord">
       <h1 class="change shad shadred">iBursa</h1>
       <h2 class="change text-uppercase">Description</h2>
       <p class="just opa">This course introduces the student to the Python language. Upon
