--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- Подключение Bootstrap -->
 <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="../static/css/bootstrap-theme.css">
 <script src="../static/js/bootstrap.min.js"></script>
 <!-- Дополнительный файл стилей -->
 <link href="../static/css/other.css" rel="stylesheet">
