--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- Подключение Bootstrap -->
 <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="../static/css/bootstrap-theme.css">
 <script src="../static/js/bootstrap.min.js"></script>
 <!-- Дополнительный файл стилей -->
 <link href="../static/css/other.css" rel="stylesheet">
@@ -193,9 +193,10 @@ WEB разработки </p>
         <div class="col-xs-12">
           <div class="sec-title text-center">
             <h1>We are a PyBursa</h1>
+            <h2>Description</h2>
           </div>
           <div class="article-list wow bounceInDown" data-wow-duration="0.5s" data-wow-delay="0s">
-           <h2>Description</h2>
+           
             <p> Pybursa is a great place where you can learn basic Python and Django framework. Also you will be up to date with big number of useful tools/technologies such a pep8, CLI, git, csv, json, JS, jQuery, Ajax, HTTP, Firebug, Web Developer, MVC, QuerySet, Raw-sql unit-tests, selenium, nginx etc. You will defenetly enjoy it!</p>
             <a class="btn blue wow bounceInLeft" data-wow-duration="1s" data-wow-delay="0s" href="http://pybursa.com">PURCHASE NOW</a><a class="btn orange learn wow bounceInRight" data-wow-duration="1s" data-wow-delay="0s" href="http://pybursa.com">learn more</a> </div>
         </div>
