--- a/templates/index.html
+++ b/templates/index.html
@@ -383,5 +383,8 @@
         </tbody>
       </table>
 	<p class="end">THE END</p>
+	<p class="btn-group">Useless staff</p>
+	<p class="btn-toolbar">Useless staff</p>
+
     </div>
   </body>
