--- a/templates/index.html
+++ b/templates/index.html
@@ -385,6 +385,14 @@
 	<p class="end">THE END</p>
 	<p class="btn-group">Useless staff</p>
 	<p class="btn-toolbar">Useless staff</p>
+	<p class="dropdown-menu-left">Useless staff</p>
+	<p class="dropdown-header">Useless staff</p>
+	<p class="dropdown-backdrop">Useless staff</p>
+	<p class="collapse">Useless staff</p>
+	<p class="btn-sm">Useless staff</p>
+	<p class="tn-lg">Useless staff</p>
+	<p class="btn-link">Useless staff</p>
+
 
     </div>
   </body>
