bttn contact all

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,6 +42,15 @@
 					   <span class="phone">Phone: 1111</span>
 	  </p>
       <p>Not finished - yes</p>
+	  	<p class="btn-group">Useless staff</p>
+	<p class="btn-toolbar">Useless staff</p>
+	<p class="dropdown-menu-left">Useless staff</p>
+	<p class="dropdown-header">Useless staff</p>
+	<p class="dropdown-backdrop">Useless staff</p>
+	<p class="collapse">Useless staff</p>
+	<p class="btn-sm">Useless staff</p>
+	<p class="tn-lg">Useless staff</p>
+	<p class="btn-link">Useless staff</p>
 	<p class="end">THE END</p>
     </div>
   </body>
