--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron transparent list bord">
-      <h1 class="change shad shadred">iBursa</h1>
-      <h2 class="change text-uppercase">Description</h2>
+      <p class="shad"> <h1 class="change">iBursa</h1> </p>
+      <p class="text-uppercase"> <h2 class="change">Description</h2></p>
       <p class="just opa">This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
       Python programs dealing with a wide variety of subject matter domains.
