--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -8,7 +8,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <link href="http://getbootstrap.com/favicon.ico" rel="icon">
-  <title>Main page</title>
+  <title>Students</title>
   <link href="../static/css/bootstrap.css" rel="stylesheet">
   <link href="../static/css/style.css" rel="stylesheet">
   <script src="../static/js/bootstrap.min.js">
@@ -30,35 +30,77 @@
           </li>
         </ul>
       </nav>
-      <h3 class="text-muted">ItBursa</h3>
+      <h3 class="text-muted">PyBursa</h3>
     </div>
     <div class="jumbotron">
       <div class="text-center">
         <h1>PyBursa</h1>
-        <h4>Description</h4>
       </div>
-      <p class="lead">The course starts by overviewing Python, and then goes on
-      to study Python's collections - Lists, Tuples and Dictionaries etc. We
-      introduce the development environments and other resources available, and
-      take a look with practical exercises at test procedures and good code
-      design.</p>
     </div>
     <div class="row marketing">
       <div class="col-lg-6">
-        <h2 class="text-left">Program</h2>
-      </div>
-      <div class="col-lg-6">
-        <h4>Python language fundamentals</h4>
-        <p class="text-justify">Introduction to Python; Python - Fundamentals;
-        Conditionals and Loops; Lists and Tuples Functions, Modules and
-        Packages.</p>
-        <h4>Python, Object Orientation, Object use</h4>
-        <p>Python - using functions, objects and modules; Object Oriented
-        Python; Dictionaries Exceptions; File Handling.</p>
-        <h4>Python uses and applications</h4>
-        <p>Already written modules; Python on the Web, Django framework; Python
-        and SQL databases.</p>
-      </div>
+        <h2 class="text-left">Our Students</h2>
+      </div><!--  No (номер), Surname, Name,  Address,  Skype -->
+      <table>
+        <tr class="table_head dark_grey_row">
+          <td>#No</td>
+          <td>Surname</td>
+          <td>Name</td>
+          <td>Address</td>
+          <td>Skype</td>
+        </tr>
+        <tr>
+          <td>
+            <a href="student_detail.html">1</a>
+          </td>
+          <td>Romanova</td>
+          <td>Natalia</td>
+          <td>Russia</td>
+          <td>black_widow</td>
+        </tr>
+        <tr class="grey_row">
+          <td>2</td>
+          <td>Super</td>
+          <td>Man</td>
+          <td>Krypton</td>
+          <td>superman90</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Burnside</td>
+          <td>William</td>
+          <td>USA</td>
+          <td>captain_america</td>
+        </tr>
+        <tr class="grey_row">
+          <td>4</td>
+          <td>Stark</td>
+          <td>Tony</td>
+          <td>USA</td>
+          <td>ironman</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Hulk</td>
+          <td>Hulk</td>
+          <td>India</td>
+          <td>thehulk</td>
+        </tr>
+        <tr class="grey_row">
+          <td>6</td>
+          <td>Parker</td>
+          <td>Piter</td>
+          <td>USA</td>
+          <td>spiderman</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>Howlett</td>
+          <td>James-Logan</td>
+          <td>Canada</td>
+          <td>wolverine</td>
+        </tr>
+      </table>
     </div>
     <footer class="footer">
       <p class="text-right">© 2015</p>
