--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,74 +1,72 @@
 <!DOCTYPE html>
 <!-- saved from url=(0050)http://getbootstrap.com/examples/jumbotron-narrow/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
-    <title>Contacts page</title>
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Main</a></li>
-            <li role="presentation"><a href="contact.html">Contacts</a></li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">ItBursa</h3>
+<html lang="en">
+<head>
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <link href="http://getbootstrap.com/favicon.ico" rel="icon">
+  <title>Contacts page</title>
+  <link href="../static/css/bootstrap.css" rel="stylesheet">
+  <link href="../static/css/style.css" rel="stylesheet">
+</head>
+<body>
+  <div class="container">
+    <div class="header clearfix">
+      <nav>
+        <ul class="nav nav-pills pull-right">
+          <li role="presentation">
+            <a href="index.html">Main</a>
+          </li>
+          <li role="presentation">
+            <a href="student_list.html">Students</a>
+          </li>
+          <li role="presentation">
+            <a href="contact.html">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <h3 class="text-muted">ItBursa</h3>
+    </div>
+    <div class="row marketing">
+      <div class="col-lg-6">
+        <h2>Course sponsors</h2>
       </div>
-
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h2>Course sponsors</h2>
-        </div>
-
-        <div class="col-lg-6">
-          <h4>Director</h4>
-          <ul>
-            <li>Name: Ivan Bondarenko</li>
-            <li>Skype: VanyaBon</li>
-            <li>Email: VanyaBon@gmail.com</li>
-            <li>Phone: 050 555 55 50</li>
-            <li>Address: Kharkiv, home</li>
-          </ul>
-
-          <h4>Manager</h4>
-          <ul>
-            <li>Name: Daria Mykhalevych</li>
-            <li>Skype: darka.darka.darka.darka.</li>
-            <li>Email: daria.mykhalevych@gmail.com</li>
-            <li>Phone: +38 096 469 15 57</li>
-            <li>Address: Kharkiv, home</li>
-          </ul>
-
-          <h4 class="mark">Founder</h4>
-          <ul>
-            <li>Name: Pavel Obod</li>
-            <li>Skype: azaless</li>
-            <li>Email: itbursa100@gmail.com</li>
-            <li>Phone: 050 555 55 55</li>
-            <li>Address: Kharkiv, home</li>
-          </ul>
-
-        </div>
+      <div class="col-lg-6">
+        <h4>Director</h4>
+        <ul>
+          <li>Name: Ivan Bondarenko</li>
+          <li>Skype: VanyaBon</li>
+          <li>Email: VanyaBon@gmail.com</li>
+          <li>Phone: 050 555 55 50</li>
+          <li>Address: Kharkiv, home</li>
+        </ul>
+        <h4>Manager</h4>
+        <ul>
+          <li>Name: Daria Mykhalevych</li>
+          <li>Skype: darka.darka.darka.darka.</li>
+          <li>Email: daria.mykhalevych@gmail.com</li>
+          <li>Phone: +38 096 469 15 57</li>
+          <li>Address: Kharkiv, home</li>
+        </ul>
+        <h4 class="">Founder</h4>
+        <ul>
+          <li>Name: Pavel Obod</li>
+          <li>Skype: azaless</li>
+          <li>Email: itbursa100@gmail.com</li>
+          <li>Phone: 050 555 55 55</li>
+          <li>Address: Kharkiv, home</li>
+        </ul>
       </div>
-
-      <footer class="footer">
-        <p class="text-left">© 2015</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../static/js/bootstrap.js"></script>
-
-
-</body></html>
+    </div>
+    <footer class="footer">
+      <p class="text-right">© 2015</p>
+    </footer>
+  </div><!-- /container -->
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <script src="../static/js/bootstrap.js">
+  </script>
+</body>
+</html>
