--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,8 @@
     <div class="jumbotron transparent list bord">
       <h1 class="change">iBursa</h1>
       <p class="shad">...Be the best or go out...</p>
-      <p class="text-uppercase"><h2 class="change">Description</h2><br>of our courses</p>
+      <h2 class="change">Description</h2><br>
+      <p class="small">of our courses</p>
       <p class="just opa">This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
       Python programs dealing with a wide variety of subject matter domains.
