--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="../static/css/sticky-footer-navbar.css" rel="stylesheet">
-    <link href="../static/css/styles.css" rel="stylesheet">
+    <link href="../static/css/style.css" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../static/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../static/js/ie-emulation-modes-warning.js"></script>
@@ -41,7 +41,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="contact.html">Contacts</a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
