add info about student

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         <ul class="nav nav-pills">
             <li role="presentation" class="active"><a href="index.html">Main</a></li>
             <li role="presentation"><a href="contact.html">Contacts</a></li>
+            <li role="presentation"><a href="student_list.html">Students</a></li>
         </ul>
     </div>
     <div class="jumbotron">
