--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ div{
 #menu{
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
+    width: auto;
 }
 .jumbotron{
     margin: 5px;
