--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,6 +14,7 @@
         <ul class="nav nav-pills">
             <li role="presentation"><a href="index.html">Main</a></li>
             <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
+            <li role="presentation"><a href="student_list.html">Students</a></li>
         </ul>
     </div>
 
