--- a/templates/index.html
+++ b/templates/index.html
@@ -44,13 +44,15 @@
       <h1>iBursa</h1>
       <h2>Description</h2>
       <p class="small">of our courses</p>
-      <p class="just opa">This course introduces the student to the Python language. Upon
+      <div class="opa"
+      <p class="just">This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
       Python programs dealing with a wide variety of subject matter domains.
       Topics include language components, the IDLE environment, control flow
       constructs, strings, I/O, collections, classes, modules, and regular
       expressions. The course is supplemented with many hands on labs using
       either Linux or Windows.</p>
+      </div>
       <hr>
       <h2 class="change text-uppercase">Program</h2>
       <ul>
