--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
       <h1>iBursa</h1>
       <h2>Description</h2>
       <p class="small">of our courses</p>
-      <div class="opa"
+      <div class="opa">
       <p class="just">This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
       Python programs dealing with a wide variety of subject matter domains.
