--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,9 @@
       either Linux or Windows.</p>
       </div>
       <hr>
-      <h2 class="change text-uppercase">Program</h2>
+      <div class="change">
+      <h2 class="text-uppercase">Program</h2>
+      </div>
       <ul>
         <li class="zagolovok1">Chapter 1: An Introduction to Python
           <ol class="spisok1">
