--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,12 @@
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron transparent list bord">
+    <div class="transparent">
+    <div class="bord">
+    <div class="jumbotron">
       <h1>iBursa</h1>
       <h2>Description</h2>
-      <p class="small">of our courses</p>
+      <p class="smalll">of our courses</p>
       <div class="opa">
       <p class="just">This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
@@ -57,7 +59,7 @@
       <div class="change">
       <h2 class="text-uppercase">Program</h2>
       </div>
-      <ul>
+      <ul class="list1">
         <li class="zagolovok1">Chapter 1: An Introduction to Python
           <ol class="spisok1">
             <li>Introduction</li>
@@ -115,6 +117,8 @@
           </ol>
         </li>
       </ul>
+    </div>
+    </div>
     </div>
   </div><!-- /container -->
 
