--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,7 +40,9 @@
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron transparent bord">
+    <div class="transparent">
+    <div class="bord">
+    <div class="jumbotron">
       <h1 class="change shad shadred">iBursa</h1>
       <h2 class="change">Contacts</h2>
       <hr>
@@ -88,6 +90,8 @@
           </ul>
         </li>
       </ul>
+    </div>
+    </div>
     </div>
   </div>
 
