--- a/templates/contact.html
+++ b/templates/contact.html
@@ -78,7 +78,11 @@
       <hr>
       <ul>
         <li>
-          <h3 class="director change text-uppercase">Founder</h3>
+          <div class="change">
+          <div class="director">
+            <h3 class="text-uppercase">Founder</h3>
+          </div>
+          </div>
         </li>
         <li style="list-style: none">
           <img class="img-rounded opa" height="150" src="../static/images/steve.png">
