--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,7 @@
 <!-- responsive stylesheet -->
 <link href="../static/css/responsive.css" rel="stylesheet">
 <!-- Подключение иконок Font Awesome -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="../static/css/font-awesome.min.css">
 <!-- Подключение Bootstrap -->
 <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 <link rel="stylesheet" href="../static/css/bootstrap-theme.css">
@@ -109,14 +109,14 @@
                 <div class="team-details">
                   <h5>Director</h5>
                   <span>John Martin</span>
-                  <div class="social2">
+                  
                     <ul class="social-icons">
-                        <li><i class="fa fa-user"></i>Name: Lizzy Rady</li><br>
-                        <li><i class="fa fa-skype"></i>Skype: lizzy_rady</li><br>
-                        <li><i class="fa fa-envelope"></i>Email: lizzy_r@gmail.com</li><br>
-                        <li><i class="fa fa-phone"></i>Phone: +38 (096) 327 77 77</li><br>
+                        <li><i class="fa fa-user"></i> Name: Lizzy Rady</li><br>
+                        <li><i class="fa fa-skype"></i> Skype: lizzy_rady</li><br>
+                        <li><i class="fa fa-envelope"></i> Email: lizzy_r@gmail.com</li><br>
+                        <li><i class="fa fa-phone"></i> Phone: +38 (096) 327 77 77</li><br>
                         </ul>
-                  </div>
+                  
                 </div>
               </div>
             </div>
@@ -125,14 +125,14 @@
                 <div class="team-details">
                   <h5>Founder</h5>
                   <span>Charles Ngo</span>
-                  <div class="social2">
+                  
                     <ul class="social-icons">
-                        <li><i class="fa fa-user"></i>Name: Teddy Rady</li><br>
-                        <li><i class="fa fa-skype"></i>Skype: Teddy_rady</li><br>
-                        <li><i class="fa fa-envelope"></i>Email: Teddy_r@gmail.com</li><br>
-                        <li><i class="fa fa-phone"></i>Phone: +38 (096) 377 77 77</li><br>
+                        <li><i class="fa fa-user"></i> Name: Teddy Rady</li><br>
+                        <li><i class="fa fa-skype"></i> Skype: Teddy_rady</li><br>
+                        <li><i class="fa fa-envelope"></i> Email: Teddy_r@gmail.com</li><br>
+                        <li><i class="fa fa-phone"></i> Phone: +38 (096) 377 77 77</li><br>
                         </ul>
-                  </div>
+                  
                 </div>
               </div>
             </div>
@@ -141,14 +141,14 @@
                 <div class="team-details">
                   <h5>Manager</h5>
                   <span>Criss Martin</span>
-                  <div class="social2">
+                 
                     <ul class="social-icons">
-                        <li><i class="fa fa-user"></i>Name: Criss Rady</li><br>
-                        <li><i class="fa fa-skype"></i>Skype: Criss_rady</li><br>
-                        <li><i class="fa fa-envelope"></i>Email: Criss_r@gmail.com</li><br>
-                        <li><i class="fa fa-phone"></i>Phone: +38 (096) 777 77 77</li><br>
+                        <li><i class="fa fa-user"></i> Name: Criss Rady</li><br>
+                        <li><i class="fa fa-skype"></i> Skype: Criss_rady</li><br>
+                        <li><i class="fa fa-envelope"></i> Email: Criss_r@gmail.com</li><br>
+                        <li><i class="fa fa-phone"></i> Phone: +38 (096) 777 77 77</li><br>
                         </ul>
-                  </div>
+                 
                 </div>
               </div>
             </div>
