--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <!-- responsive stylesheet -->
 <link href="../static/css/responsive.css" rel="stylesheet">
 <!-- Подключение иконок Font Awesome -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="../static/css/font-awesome.min.css">
 <!-- Подключение Bootstrap -->
 <link rel="stylesheet" href="../static/css/bootstrap.min.css">
 <link rel="stylesheet" href="../static/css/bootstrap-theme.css">
