--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800italic,800');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100');
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,300,200,100,500,600,700,800,900');
-
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css');
 /*
  1.1) Homepage - common style
  ----------------------------------------*/
