--- a/templates/contact.html
+++ b/templates/contact.html
@@ -55,7 +55,7 @@
           <ul>
             <li><b>Name:</b> Tim Cook</li>
             <li><b>Skype:</b> timcook</li>
-            <li><b>Email:</b> timcook@apple.com</li>
+            <li><b>Email:</b> <span class="under"> timcook@apple.com</span></li>
             <li><b>Phone:</b> +1 555 55 555 75</li>
           </ul>
         </li>
