--- a/templates/contact.html
+++ b/templates/contact.html
@@ -70,7 +70,7 @@
           <ul>
             <li><b>Name:</b> Eddy Cue</li>
             <li><b>Skype:</b> eddy.cue</li>
-            <li><b>Email:</b> eddy.cue@apple.com</li>
+            <li><b>Email:</b> <span class="blue"> eddy.cue@apple.com</span></li>
             <li><b>Phone:</b> +1 555 55 555 76</li>
           </ul>
         </li>
