--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="#">Contacts </a></li>
+        <li class="active"><a href="contact.html">Contacts </a></li>
         
         </li>
       </ul>
