--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Main</a></li>
+        <li class="active"><a href="index.html">Main</a></li>
         <li><a href="contact.html" >Contacts</a></li>
         
         </li>
@@ -52,7 +52,7 @@
       <p id="topic1">Topic #1</p>
       <p id="topic2">Topic #2</p>
       <p id="topic3">Topic #3</p>
-      </div>
+        </div>
   </div>
 
 
