--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
     <!-- Begin page content -->
     <div class="container">
       <div class="page-header">
-        <h1>Description</h1>
+        <h1><p>Description</p></h1>
       </div>
       <p class="lead">Чем интересен наш курс?</p>
       <p class="text-justify">Практический курс по изучению современного языка программирования Python и фреимворка Django. 
@@ -63,7 +63,7 @@
         Курс совершенствуется из года в год и становится еще более эффективным.
       </p>
       <br>
-      <p class="lead">Program</p>
+      <h2><p class="lead">Program</p></h2>
       <ul>
         <li class="main_item">Основы Python</li>
         <li class="period">zen, pep8, pylint, tools, IDE</li>
