add css selectors  into student_list

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -22,12 +22,13 @@
         <tr> <td>Name</td> <td>Olena</td> </tr>
         <tr> <td>Patronymic</td> <td>Yriivna</td> </tr>
         <tr> <td>Rating</td> <td>20</td> </tr>
-        <tr> <td>Average grade</td> <td>99</td> </tr>
+        <tr> <td>Average Grade</td> <td>99</td> </tr>
         <tr> <td>Package</td> <td>Standart</td> </tr>
-        <tr> <td>Birth day</td> <td>10-05-1989</td> </tr>
+        <tr> <td>Birth Date</td> <td>10-05-1989</td> </tr>
         <tr> <td>Address</td> <td>Ukraine</td> </tr>
         <tr> <td>Post</td> <td>61085</td> </tr>
         <tr> <td>Skype</td> <td>Persianova</td> </tr>
+        <tr> <td>E-mail</td> <td>Persianova@test.com</td> </tr>
     </table>
     <p>Perfomance</p>
     <table class="table table-bordered">
@@ -48,7 +49,7 @@
             <td>100% </td>
         </tr>
         <tr>
-            <td>Problem task №2</td>
+            <td>Problem Task №2</td>
             <td>90% </td>
         </tr>
         <tr>
