--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -15,13 +15,17 @@
             <li role="presentation"  class="active"><a href="student_list.html">Students</a></li>
         </ul>
     </div>
+    <div class="jumbotron">
+        <h1>Welcome</h1>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
     <div class="page-header">
-        <h1>Спиок студентов PyBursa</h1>
-        <p> Перечень студентов</p>
+        <h1 class="alert alert-success center">Список студентов PyBursa</h1>
+        <div class="alert alert-info center" role="alert">Перечень студентов</div>
     </div>
     <table class="table table-bordered">
         <tr>
-            <th>№</th>
+            <th>No</th>
             <th>Name</th>
             <th>Surname</th>
             <th>Address</th>
@@ -69,10 +73,7 @@
             <td>Ukraine</td>
             <td>Borodkin</td>
         </tr>
-
-
-
-
     </table>
+    <div class="well well-sm center">Good luck</div>
 </body>
 </html>
