--- a/templates/contact.html
+++ b/templates/contact.html
@@ -107,7 +107,7 @@
             <div class="col-md-4 col-xs-12 item wow bounceInLeft" data-wow-duration="0.5s" data-wow-delay="0s">
               <div class="teams"> <img class="hvr-pulse-grow" src="../static/images/team1.jpg" alt="">
                 <div class="team-details">
-                  <h5>Director</h5>
+                  <h5 class="persn">Director</h5>
                   <span>John Martin</span>
                   
                     <ul class="social-icons">
@@ -123,7 +123,7 @@
             <div class="col-md-4 col-xs-12 item wow bounceInLeft" data-wow-duration="1s" data-wow-delay="0s">
               <div class="teams"> <img class="hvr-pulse-grow" src="../static/images/team2.jpg" alt="">
                 <div class="team-details">
-                  <h5>Founder</h5>
+                  <h5 class="persn">Founder</h5>
                   <span>Charles Ngo</span>
                   
                     <ul class="social-icons">
@@ -139,7 +139,7 @@
             <div class="col-md-4 col-xs-12 item wow bounceInLeft" data-wow-duration="1.5s" data-wow-delay="0s">
               <div class="teams"> <img class="hvr-pulse-grow" src="../static/images/team3.jpg" alt="">
                 <div class="team-details">
-                  <h5>Manager</h5>
+                  <h5 class="persn">Manager</h5>
                   <span>Criss Martin</span>
                  
                     <ul class="social-icons">
