--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -75,5 +75,14 @@
         </tr>
     </table>
     <div class="well well-sm center">Good luck</div>
+    <span class="label label-info">to you</span>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Panel title</h3>
+        </div>
+        <div class="panel-body">
+            Panel content
+        </div>
+    </div>
 </body>
 </html>
