add css selectors into student_detail

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -17,6 +17,14 @@
     </div>
     <h1>Persianova Elena</h1>
     <p> Информация о студенте</p>
+    <div class="jumbotron">
+        <h1>Info</h1>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Student's blog</a></p>
+    </div>
+    <div class="page-header">
+        <h1 class="alert alert-success center">Подробная информация</h1>
+        <div class="alert alert-info center" role="alert">о студенте</div>
+    </div>
     <table class="table table-bordered">
         <tr> <td>Surname</td> <td>Persianova</td> </tr>
         <tr> <td>Name</td> <td>Olena</td> </tr>
@@ -61,8 +69,16 @@
             <td>Problem task 1</td>
             <td>95% </td>
         </tr>
-
-
     </table>
+    <div class="well well-sm center">Good luck</div>
+        <span class="label label-info">to you</span>
+        <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Panel title</h3>
+        </div>
+        <div class="panel-body">
+            Panel content
+        </div>
+    </div>
 </body>
 </html>
