--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+
+    <title>Linux_Bursa - Student details</title>
 
 
-    <title>Linux_Bursa - Main</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="../static/css/bootstrap.css" type="text/css">
@@ -47,30 +49,13 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
+    <header> 
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Start learn Linux now!</h1>
-                <hr>
-                <a href="#program" class="btn btn-primary btn-xl page-scroll">course info</a>
+                <h2>Students:</h2>
             </div>
         </div>
     </header>
-
-    <section id="program">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Linux_Bursa Program:</h2>
-                    <hr class="primary">
-                    <p>Ready to start your next project or work with linux?</p>
-                    <h2 class="section-heading">Description:</h2>
-                    <hr class="primary">
-                    <p>Part One:<br>Intro to linux<br>Filesystem ext4<br>Command line in linux<br>Coming soon...<br><br></p>
-                </div>
-            </div>
-        </div>
-    </section>
 
 </body>
 
