--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,7 +40,7 @@
                         <a class="page-scroll" href="contact.html">Contacts</a>
                     </li>
                     <li>
-                        
+                      <a class="page-scroll" href="student_list.html">Students</a>
                     </li>
                 </ul>
             </div>
